--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "watch 'npm run build' .",
     "build": "browserify index.js -o ./playground/build.js",
     "start": "http-server ./playground"
   },
@@ -13,5 +14,8 @@
     "http-server": "^0.11.1",
     "runtypes": "^4.0.1",
     "ts-runtime": "^0.2.0"
+  },
+  "devDependencies": {
+    "watch": "^1.0.2"
   }
 }
